[gd_scene load_steps=36 format=3 uid="uid://cnhvt3cgmy5ei"]

[ext_resource type="Script" path="res://scripts/props/level_selector.gd" id="1_mv8lg"]
[ext_resource type="Texture2D" uid="uid://7x3apajnpdx4" path="res://ressources/assets/images/props/props.png" id="2_dl1cw"]
[ext_resource type="PackedScene" uid="uid://bv60ljro0i1uk" path="res://scenes/interaction/interaction area/interaction_area.tscn" id="3_1j4e5"]
[ext_resource type="FontFile" uid="uid://cokxfsrucfycg" path="res://ressources/fonts/monogram.ttf" id="6_h56cw"]
[ext_resource type="Texture2D" uid="uid://co6vwaehyiak8" path="res://ressources/assets/images/One_Sheet.png" id="9_bqflj"]
[ext_resource type="Texture2D" uid="uid://cpc2sfvuwhoro" path="res://ressources/assets/sprite/Purple Portal Sprite Sheet.png" id="9_o1w6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnxmb"]
size = Vector2(61, 123)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qmhbk"]
content_margin_left = 14.0
content_margin_top = 8.0
content_margin_right = 14.0
content_margin_bottom = 6.0
texture = ExtResource("9_bqflj")
texture_margin_left = 5.04615
texture_margin_top = 5.61994
texture_margin_right = 3.44098
texture_margin_bottom = 8.90301
region_rect = Rect2(153.266, 28.1224, 111.782, 56.7814)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_58787"]
texture = ExtResource("9_bqflj")
texture_margin_left = 5.04615
texture_margin_top = 5.61994
texture_margin_right = 3.44098
texture_margin_bottom = 8.90301
region_rect = Rect2(153.266, 28.1224, 111.782, 56.7814)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_prok3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eel81"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.32418
texture_margin_top = 3.64853
texture_margin_right = 2.56748
texture_margin_bottom = 2.56748
region_rect = Rect2(119.616, 86.1757, 16.9751, 16.7575)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hnrqr"]
texture = ExtResource("9_bqflj")
texture_margin_left = 3.86474
texture_margin_top = 4.05392
texture_margin_right = 2.83774
texture_margin_bottom = 1.78372
region_rect = Rect2(136, 86, 16, 17)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_357uu"]
texture = ExtResource("9_bqflj")
texture_margin_left = 3.82998
texture_margin_top = 4.40376
texture_margin_right = 3.0
texture_margin_bottom = 2.41674
region_rect = Rect2(136, 86, 16, 17)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hshjw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qqm5k"]
texture = ExtResource("9_bqflj")
texture_margin_left = 3.0
texture_margin_top = 4.67538
texture_margin_right = 2.69788
texture_margin_bottom = 2.51802
region_rect = Rect2(153.872, 16.1371, 42.0428, 12.2304)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nu3k1"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.05392
texture_margin_top = 3.78366
texture_margin_right = 2.16209
texture_margin_bottom = 1.62157
region_rect = Rect2(119.543, 69.0765, 16.8913, 15.9454)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5etxr"]
texture = ExtResource("9_bqflj")
texture_margin_left = 3.78366
texture_margin_top = 3.91879
texture_margin_right = 2.43235
texture_margin_bottom = 2.29722
region_rect = Rect2(136, 68, 17, 17)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k1kwj"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.64076
texture_margin_top = 4.26863
texture_margin_right = 2.35993
texture_margin_bottom = 2.14648
region_rect = Rect2(136.693, 68.7305, 16.3508, 16.6211)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_deopx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jvtd1"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.05392
texture_margin_top = 4.18905
texture_margin_right = 2.29722
texture_margin_bottom = 2.16209
region_rect = Rect2(119.318, 119.94, 17.0866, 16.7269)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c5djc"]
texture = ExtResource("9_bqflj")
region_rect = Rect2(136.822, 120.081, 15.8103, 15.4049)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtbcv"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.64076
texture_margin_top = 4.26863
texture_margin_right = 2.35993
texture_margin_bottom = 2.14648
region_rect = Rect2(119.533, 120.347, 16.0805, 15.9454)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75xvv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bshjq"]
texture = ExtResource("9_bqflj")
texture_margin_left = 3.91879
texture_margin_top = 3.37826
texture_margin_right = 2.56748
texture_margin_bottom = 1.89183
region_rect = Rect2(119.663, 103.459, 16.8913, 16.0805)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64knw"]
texture = ExtResource("9_bqflj")
region_rect = Rect2(136.554, 103.057, 16.4859, 15.9454)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cxiqn"]
texture = ExtResource("9_bqflj")
texture_margin_left = 4.64076
texture_margin_top = 4.26863
texture_margin_right = 2.35993
texture_margin_bottom = 2.14648
region_rect = Rect2(136.825, 102.921, 16.3508, 17.0265)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6tupn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtmuk"]
size = Vector2(28, 63)

[sub_resource type="Animation" id="Animation_l0koi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_o1w6q")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_r7j0v"]
resource_name = "disapear"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_7ha88"]
resource_name = "emerge"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_lmf0g"]
resource_name = "idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_o1w6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ojhf"]
_data = {
"RESET": SubResource("Animation_l0koi"),
"disapear": SubResource("Animation_r7j0v"),
"emerge": SubResource("Animation_7ha88"),
"idle": SubResource("Animation_lmf0g")
}

[sub_resource type="Gradient" id="Gradient_awgwx"]
offsets = PackedFloat32Array(0.440433, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rj3yy"]
gradient = SubResource("Gradient_awgwx")
fill = 1
fill_from = Vector2(0.538462, 0.529915)
fill_to = Vector2(1, 1)

[node name="LevelSelector" type="Node2D"]
script = ExtResource("1_mv8lg")

[node name="Statue" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.55, 2.55)
texture = ExtResource("2_dl1cw")
region_enabled = true
region_rect = Rect2(243, 226, 25, 46)

[node name="InteractionArea" parent="." instance=ExtResource("3_1j4e5")]
position = Vector2(-46, -52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(46, 53)
shape = SubResource("RectangleShape2D_pnxmb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.435294)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = -5

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_qmhbk")

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer2/PanelContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_h56cw")
text = "DESTINATION"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_58787")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_prok3")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -1

[node name="left" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_eel81")
theme_override_styles/hover = SubResource("StyleBoxTexture_hnrqr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_357uu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hshjw")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_qqm5k")

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(90, 4.085)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_h56cw")
text = "None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="right" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_nu3k1")
theme_override_styles/hover = SubResource("StyleBoxTexture_5etxr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k1kwj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_deopx")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="ok" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_jvtd1")
theme_override_styles/hover = SubResource("StyleBoxTexture_c5djc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dtbcv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_75xvv")

[node name="cancel" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_bshjq")
theme_override_styles/hover = SubResource("StyleBoxTexture_64knw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cxiqn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6tupn")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-5, 6)
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(98, 12)
scale = Vector2(1.65, 1.65)
texture = ExtResource("9_o1w6q")
hframes = 8
vframes = 3
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(98, 18.5)
shape = SubResource("RectangleShape2D_jtmuk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
libraries = {
"": SubResource("AnimationLibrary_7ojhf")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(2, -8)
enabled = false
color = Color(0.478431, 0.294118, 0.686275, 1)
texture = SubResource("GradientTexture2D_rj3yy")
texture_scale = 3.1

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/cancel" to="." method="_on_cancel_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
